--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,6 @@ mockitoVersion=5.2.0
 archunitVersion=1.0.1
 testcontainersVersion=1.20.4
 pitestJunitPluginVersion=1.2.1
-r2dbcVersion=3.0.1
 reactorVersion=3.5.5
 
 # Tasks
@@ -22,3 +21,14 @@ testTasks=clean test
 
 # JAVA CONFIG
 javaVersion=21
+
+# Database Reactive
+r2dbcVersion=3.0.1
+
+# AWS SDK
+awsSdkVersion=2.20.108
+
+# Hibernate Reactive (Para JPA en entornos reactivos)
+hibernateReactiveVersion=2.0.3.Final
+
+reactorKafkaVersion=1.3.19
