--- a/build.gradle
+++ b/build.gradle
@@ -8,80 +8,122 @@ plugins {
     id 'com.github.ben-manes.versions' version "${benManesVersion}"
     id 'pmd'
     id 'org.sonarqube' version "${sonarQubeVersion}"
+    id 'org.owasp.dependencycheck' version '8.4.1'
 }
 
 group = 'com.company.templateservice'
 version = '1.0.0-RELEASE'
 
-def javaVersion = file('java.version').text.trim()
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(javaVersion.toInteger()))
     }
 }
 
-bootJar {
-    enabled = true
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        mavenBom "io.opentelemetry:opentelemetry-bom:${otelVersion}"
+        mavenBom "com.fasterxml.jackson:jackson-bom:${jacksonBomVersion}"
+    }
 }
 
 springBoot {
     mainClass.set("com.company.templateservice.Application")
 }
 
-allprojects {
-    repositories {
-        mavenCentral()
-    }
-}
-
 subprojects {
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
-    repositories {
-        mavenCentral()
+
+    java {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(javaVersion.toInteger()))
+        }
     }
 
-    tasks.register("integrationTest", Test) {
-        useJUnitPlatform()
+    dependencies {
+        testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
+        testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+        testImplementation "com.tngtech.archunit:archunit-junit5:${archunitVersion}"
     }
 
-    tasks.register("performanceTest", Test) {
+    tasks.withType(Test).configureEach {
         useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+        }
     }
 
-    tasks.register("mutationTest", Test) {
-        useJUnitPlatform()
+    plugins.withId('org.springframework.boot') {
+        bootJar.enabled = false
     }
-
-    tasks.register("archTest", Test) {
-        useJUnitPlatform()
+    jar {
+        enabled = true
     }
 }
 
 dependencies {
-
-    implementation "io.r2dbc:r2dbc-h2:1.0.0.RELEASE"
-    // --- WebFlux ---
+    // Core Webflux + Reactive Stack
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-
-    // --- Base de Datos Reactiva ---
-    // implementation "io.r2dbc:r2dbc-postgresql:${r2dbcVersion}"
-    implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
-
-    // --- ORM Reactivo ---
+    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+    implementation "io.r2dbc:r2dbc-h2:${r2dbcH2Version}"
     implementation "org.hibernate.reactive:hibernate-reactive-core:${hibernateReactiveVersion}"
 
-    // --- AWS SDK ---
+    // AWS SDK
     implementation "software.amazon.awssdk:s3:${awsSdkVersion}"
     implementation "software.amazon.awssdk:dynamodb:${awsSdkVersion}"
-    implementation "software.amazon.awssdk:sns:${awsSdkVersion}"
     implementation "software.amazon.awssdk:sqs:${awsSdkVersion}"
+    implementation "software.amazon.awssdk:sns:${awsSdkVersion}"
 
-    // --- Kafka Reactivo ---
-    implementation 'org.springframework.kafka:spring-kafka'
+    // Messaging (Kafka)
     implementation "io.projectreactor.kafka:reactor-kafka:${reactorKafkaVersion}"
 
-    // --- Serialización JSON ---
+    // JSON Serialization
     implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+    // Observabilidad (Micrometer Tracing con OpenTelemetry)
+    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
+    implementation "io.opentelemetry:opentelemetry-exporter-otlp"
+
+    // Calidad de Código y Seguridad
+    implementation "net.sourceforge.pmd:pmd-java:${pmdVersion}"
 }
 
+jacoco {
+    toolVersion = "${jacocoVersion}"
+}
+
+tasks.withType(Test).configureEach {
+    finalizedBy 'jacocoTestReport'
+}
+
+tasks.named('jacocoTestReport') {
+    dependsOn 'test'
+    reports {
+        xml.required.set(true)
+        csv.required.set(false)
+        html.required.set(true)
+    }
+}
+
+dependencyUpdates {
+    revision = 'release'
+    outputFormatter = 'json'
+    outputDir = 'build/dependencyUpdates'
+    reportfileName = 'report'
+}
+
+// Chequeo combinado: test + coverage + update + vulnerabilidades
+tasks.register('checkAll') {
+    dependsOn 'clean', 'test', 'jacocoTestReport', 'dependencyUpdates', 'dependencyCheckAnalyze'
+}
+
+// Config OWASP Dependency Check
+dependencyCheck {
+    failBuildOnCVSS = 7  // Falla si hay vulnerabilidades graves
+    suppressionFile = file("${project.rootDir}/dependency-check-suppressions.xml")
+    analyzers {
+        assemblyEnabled = false
+    }
+}
