--- a/gradle.properties
+++ b/gradle.properties
@@ -9,26 +9,22 @@ pmdVersion=6.55.0
 sonarQubeVersion=4.2.1.3168
 
 # Dependency Versions
-junitVersion=5.9.3
-mockitoVersion=5.2.0
+junitVersion=5.10.2
+mockitoVersion=5.11.0
 archunitVersion=1.0.1
-testcontainersVersion=1.20.4
 pitestJunitPluginVersion=1.2.1
-reactorVersion=3.5.5
-
-# Tasks
-testTasks=clean test
-
-# JAVA CONFIG
-javaVersion=21
-
-# Database Reactive
-r2dbcVersion=3.0.1
-
-# AWS SDK
-awsSdkVersion=2.20.108
-
-# Hibernate Reactive (Para JPA en entornos reactivos)
+r2dbcH2Version=1.0.0.RELEASE
 hibernateReactiveVersion=2.0.3.Final
-
+awsSdkVersion=2.20.108
 reactorKafkaVersion=1.3.19
+jacksonBomVersion=2.16.0
+testcontainersVersion=1.19.3
+
+# Observability Stack
+otelVersion=1.31.0
+
+# Spring Cloud
+springCloudVersion=2023.0.0
+
+# Java Configuration
+javaVersion=21
