feat: add security check config

--- a/adapters/in/rest/build.gradle
+++ b/adapters/in/rest/build.gradle
@@ -1,4 +1,4 @@
-dependencies {
-    implementation project(':application')
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+plugins {
+    id 'java'
 }
+dependencies { implementation 'org.springframework.boot:spring-boot-starter-webflux' }
