--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,1 @@
-dependencies {
-    implementation project(':shared')
-    testImplementation "com.tngtech.archunit:archunit-junit5:${archunitVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
-
-}
+dependencies { /* Si hay algo específico se deja */ }
