--- a/gradle.properties
+++ b/gradle.properties
@@ -2,23 +2,19 @@
 springBootVersion=3.2.4
 dependencyManagementVersion=1.1.4
 spotlessVersion=6.21.0
-pitestVersion=1.1.2
-jacocoVersion=0.8.11
-benManesVersion=0.50.0
 pmdVersion=6.55.0
 sonarQubeVersion=4.2.1.3168
+benManesVersion=0.50.0
+jacocoVersion=0.8.10
 
 # Dependency Versions
 junitVersion=5.10.2
 mockitoVersion=5.11.0
 archunitVersion=1.0.1
-pitestJunitPluginVersion=1.2.1
-r2dbcH2Version=1.0.0.RELEASE
-hibernateReactiveVersion=2.0.3.Final
-awsSdkVersion=2.20.108
-reactorKafkaVersion=1.3.19
 jacksonBomVersion=2.16.0
-testcontainersVersion=1.19.3
+guavaVersion=32.1.2-jre
+checkstyleVersion=10.12.5
+
 
 # Observability Stack
 otelVersion=1.31.0
