--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,12 @@ dependencyManagementVersion=1.1.4
 spotlessVersion=6.21.0
 pmdVersion=6.55.0
 sonarQubeVersion=4.2.1.3168
-benManesVersion=0.50.0
+benManesVersion=0.52.0
 jacocoVersion=0.8.10
+owaspDependencyCheckVersion=12.1.0
+openTelemetryVersion=1.30.0
+openTelemetrySpringVersion=1.30.0-alpha
+micrometerVersion=1.11.0
 
 # Dependency Versions
 junitVersion=5.10.2
