--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,6 @@
 benManesVersion=0.52.0
 dependencyManagementVersion=1.1.4
 jacocoVersion=0.8.10
-openTelemetrySpringVersion=1.30.0-alpha
 owaspDependencyCheckVersion=12.1.0
 pmdVersion=6.55.0
 sonarQubeVersion=4.2.1.3168
@@ -13,15 +12,22 @@ springBootVersion=3.2.4
 springCloudVersion=2023.0.0
 springCloudContractVersion=4.0.4
 
-# Dependency Versions
+# Testing & Code Quality
+junitVersion=5.10.2
+mockitoVersion=5.11.0
 archunitVersion=1.0.1
 checkstyleVersion=10.12.5
+
+# Dependency Versions
 guavaVersion=32.1.2-jre
 jacksonBomVersion=2.16.0
-junitVersion=5.10.2
 micrometerVersion=1.11.0
-mockitoVersion=5.11.0
 openTelemetryVersion=1.30.0
 
 # Observability Stack
+openTelemetrySpringVersion=1.30.0-alpha
 otelVersion=1.31.0
+
+# API Testing & Mocks
+wiremockVersion=2.35.0
+restAssuredVersion=5.3.0
