--- a/adapters/in/rest/build.gradle
+++ b/adapters/in/rest/build.gradle
@@ -1,4 +1,3 @@
-plugins {
-    id 'java'
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
-dependencies { implementation 'org.springframework.boot:spring-boot-starter-webflux' }
