--- a/src/main/resources/ci/Dockerfile
+++ b/src/main/resources/ci/Dockerfile
@@ -1,1 +1,10 @@
-HEALTHCHECK CMD curl --fail http://localhost:8080/actuator/health || exit 1
+FROM eclipse-temurin:23-jdk AS builder
+WORKDIR /app
+COPY . .
+RUN ./gradlew clean build -x test
+
+FROM eclipse-temurin:23-jre
+WORKDIR /app
+COPY --from=builder /app/build/libs/app.jar app.jar
+EXPOSE 8081
+ENTRYPOINT ["java", "-jar", "app.jar"]
