add jwt config and keycloack

--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'com.diffplug.spotless' version '6.23.3'
-    id 'pmd'
-    // id 'checkstyle'
+   // id 'pmd'
+    id 'checkstyle'
     id 'org.sonarqube' version '4.2.1.3168'
     id 'org.owasp.dependencycheck' version '12.1.0'
     id 'com.github.ben-manes.versions' version '0.52.0'
@@ -32,6 +32,14 @@ spotless {
         target 'src/**/*.java'
     }
 }
+
+checkstyle {
+    toolVersion = '10.12.2'
+    configFile = file("$rootDir/config/checkstyle/checkstyle.xml")
+    ignoreFailures = false
+}
+
+
 
 dependencyManagement {
     imports {
