--- a/.gitlab/renovate.json
+++ b/.gitlab/renovate.json
@@ -1,14 +1,23 @@
 {
-  "extends": ["config:base"],
-  "packageRules": [
-    {
-      "matchManagers": ["gradle"],
-      "matchPackagePatterns": [".*"],
-      "groupName": "Gradle Dependencies",
-      "updateTypes": ["minor", "patch"]
+    "extends": [
+        "config:base"
+    ],
+    "packageRules": [
+        {
+            "matchManagers": [
+                "gradle"
+            ],
+            "matchPackagePatterns": [
+                ".*"
+            ],
+            "groupName": "Gradle Dependencies",
+            "updateTypes": [
+                "minor",
+                "patch"
+            ]
+        }
+    ],
+    "gradle": {
+        "enabled": true
     }
-  ],
-  "gradle": {
-    "enabled": true
-  }
 }
