--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,12 @@ subprojects {
     tasks.withType(Test).configureEach {
         useJUnitPlatform()
     }
+
+    tasks.register('archTest', Test) {
+        description = 'Ejecuta los tests de arquitectura'
+        useJUnitPlatform()
+        include '**/*ArchitectureTest.class'
+    }
 }
 
 dependencies {
@@ -82,6 +88,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation "com.tngtech.archunit:archunit-junit5:${archunitVersion}"
+
 }
 
 // ✅ Usamos sólo bootJar para generar el JAR ejecutable
