feat: add swagger configuration

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -67,3 +67,10 @@ management:
     export:
       prometheus:
         enabled: true
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+  api-docs:
+    enabled: true
