--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ checkstyle {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.1"
+        mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.4"
     }
 }
 
