--- a/gradle.properties
+++ b/gradle.properties
@@ -1,30 +1,22 @@
+# Gradle settings
 org.gradle.jvmargs=--add-opens=java.base/java.io=ALL-UNNAMED -Xmx2g -Xms512m
 org.gradle.workers.max=1
+
 # Plugin Versions
-benManesVersion=0.52.0
-dependencyManagementVersion=1.1.4
-jacocoVersion=0.8.10
-owaspDependencyCheckVersion=12.1.0
-pmdVersion=6.55.0
-sonarQubeVersion=4.2.1.3168
-spotlessVersion=6.21.0
-springBootVersion=3.2.4
+benManesVersion=0.52.0                    # Used in build.gradle: com.github.ben-manes.versions
+dependencyManagementVersion=1.1.4         # Used in build.gradle: io.spring.dependency-management
+jacocoVersion=0.8.10                      # Used for test coverage plugin
+owaspDependencyCheckVersion=12.1.0        # Used in build.gradle: org.owasp.dependencycheck
+pmdVersion=6.55.0                         # Used if PMD plugin is enabled
+sonarQubeVersion=4.2.1.3168               # Used in build.gradle: org.sonarqube
+spotlessVersion=6.21.0                    # Used in build.gradle: com.diffplug.spotless
+
+# Spring Boot version for plugins (you can remove if already hardcoded)
+springBootVersion=3.2.4                   # Used in build.gradle: org.springframework.boot
+
 # Spring Cloud
-springCloudVersion=2023.0.0
-springCloudContractVersion=4.0.4
-# Testing & Code Quality
-junitVersion=5.10.2
-mockitoVersion=5.11.0
-archunitVersion=1.0.1
-checkstyleVersion=10.12.5
-# Dependency Versions
-guavaVersion=32.1.2-jre
-jacksonBomVersion=2.16.0
-micrometerVersion=1.11.0
-openTelemetryVersion=1.30.0
-# Observability Stack
-openTelemetrySpringVersion=1.30.0-alpha
-otelVersion=1.31.0
-# API Testing & Mocks
-wiremockVersion=2.35.0
-restAssuredVersion=5.3.0
+springCloudVersion=2023.0.0               # Used in mavenBom for Spring Cloud
+springCloudContractVersion=4.0.4          # Not currently used, keep if needed in future
+
+# Code Quality Tools
+checkstyleVersion=10.12.5                 # Used in checkstyle configuration in build.gradle
