--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,34 @@
-# Gradle settings
+# ? Gradle Runtime Settings
 org.gradle.jvmargs=--add-opens=java.base/java.io=ALL-UNNAMED -Xmx2g -Xms512m
 org.gradle.workers.max=1
 
-# Plugin Versions
-benManesVersion=0.52.0                    # Used in build.gradle: com.github.ben-manes.versions
-dependencyManagementVersion=1.1.4         # Used in build.gradle: io.spring.dependency-management
-jacocoVersion=0.8.10                      # Used for test coverage plugin
-owaspDependencyCheckVersion=12.1.0        # Used in build.gradle: org.owasp.dependencycheck
-pmdVersion=6.55.0                         # Used if PMD plugin is enabled
-sonarQubeVersion=4.2.1.3168               # Used in build.gradle: org.sonarqube
-spotlessVersion=6.21.0                    # Used in build.gradle: com.diffplug.spotless
+# ?? Plugin Versions
+benManesVersion=0.52.0
+dependencyManagementVersion=1.1.7
+jacocoVersion=0.8.10
+owaspDependencyCheckVersion=12.1.0
+sonarQubeVersion=6.1.0.5360
+spotlessVersion=7.0.2
+checkstyleVersion=10.12.2
 
-# Spring Boot version for plugins (you can remove if already hardcoded)
-springBootVersion=3.2.4                   # Used in build.gradle: org.springframework.boot
+# ? Spring Stack Versions
+springBootVersion=3.4.4
+springCloudVersion=2024.0.1
+springCloudContractVersion=4.0.4  # Optional / future use
 
-# Spring Cloud
-springCloudVersion=2023.0.0               # Used in mavenBom for Spring Cloud
-springCloudContractVersion=4.0.4          # Not currently used, keep if needed in future
+# ? Java Toolchain
+javaVersion=23
 
-# Code Quality Tools
-checkstyleVersion=10.12.5                 # Used in checkstyle configuration in build.gradle
+# ? Test Libraries
+junitVersion=5.10.1
+junitPlatformVersion=1.10.1
+wiremockVersion=3.0.1
+restAssuredVersion=5.3.1
+archunitVersion=1.2.1
+
+# ? Observability & Validation
+micrometerVersion=1.12.3
+springdocOpenApiVersion=2.5.0
+jakartaValidationVersion=3.0.2
+hibernateValidatorVersion=8.0.1.Final
+jakartaElVersion=4.0.2
