--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
       - 'v*.*.*'
   pull_request:
 
+permissions:
+  contents: write  # 👈 Necesario para que GitHub Actions pueda crear releases
+
 jobs:
   build:
     name: Build & Test
