--- a/.github/changelog-config.json
+++ b/.github/changelog-config.json
@@ -1,11 +1,32 @@
 {
-    "template": "## What's Changed\n\n{{CHANGELOG}}\n",
+    "template": "## 📦 Release {{version}} - {{date}}\n\n{{CHANGELOG}}\n\n🔍 [Compare changes](https://github.com/marcoslozina/template-service/compare/{{previousTag}}...{{currentTag}})\n\n---\n",
     "categories": [
-        { "title": "🚀 Features", "labels": ["feature", "enhancement"] },
-        { "title": "🐛 Bug Fixes", "labels": ["bug"] },
-        { "title": "🧪 Tests", "labels": ["test"] },
-        { "title": "🧹 Chores", "labels": ["chore"] }
+        {
+            "title": "🚀 Features",
+            "labels": ["feature", "enhancement"]
+        },
+        {
+            "title": "🐛 Bug Fixes",
+            "labels": ["bug"]
+        },
+        {
+            "title": "🧪 Tests",
+            "labels": ["test"]
+        },
+        {
+            "title": "🧹 Chores",
+            "labels": ["chore"]
+        },
+        {
+            "title": "📄 Other",
+            "labels": []
+        }
     ],
     "excludeLabels": ["skip-changelog"],
-    "sort": "ASC"
+    "sort": "ASC",
+    "commitMode": "replace",
+    "ignoreCommitsWithoutIssue": false,
+    "onlyLastTag": true,
+    "prTitle": "### 🔀 PR: {{title}}",
+    "prTemplate": "- {{title}} [#{{number}}]({{url}}) by @{{author}}"
 }
