feat(appñication): configure security and observability

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,3 +32,4 @@ springdocOpenApiVersion=2.5.0
 jakartaValidationVersion=3.0.2
 hibernateValidatorVersion=8.0.1.Final
 jakartaElVersion=4.0.2
+logstashLogbackVersion=7.4
