--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ on:
   pull_request:
 
 permissions:
-  contents: write  # 👈 Necesario para crear releases y pushear el changelog
+  contents: write       # 👉 Necesario para pushear y crear releases
+  pull-requests: read   # 👉 Necesario para leer PRs y generar changelog
 
 jobs:
   build:
@@ -73,10 +74,12 @@ jobs:
     name: Release Build & Changelog
     runs-on: ubuntu-latest
     needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # 👉 Necesario para acceder a PRs cerrados
 
       - name: Set up JDK 23
         uses: actions/setup-java@v3
@@ -100,7 +103,8 @@ jobs:
         uses: mikepenz/release-changelog-builder-action@v4
         with:
           configuration: ".github/changelog-config.json"
-          outputFile: "CHANGELOG.md"  # 👈 genera o actualiza el changelog local
+          outputFile: "CHANGELOG.md"
+          failOnError: false  # 👉 Evita que falle si no puede acceder a PRs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -113,6 +117,7 @@ jobs:
           git push origin HEAD:main
 
       - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v1
         with:
           files: release/*.jar
