--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'push' || github.event_name == 'pull_request'
-
+    env:
+      RUN_SONAR: ${{ vars.RUN_SONAR }}
     steps:
       - uses: actions/checkout@v3
         with:
