--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-### ✅ .github/workflows/ci.yml
 name: CI - Full Pipeline
 
 on:
@@ -7,6 +6,9 @@ on:
     tags:
       - 'v*.*.*'
   pull_request:
+
+permissions:
+  contents: write   # ✅ Necesario para que softprops/action-gh-release cree releases
 
 env:
   RUN_SONAR: ${{ vars.RUN_SONAR }}
